Changes in main activity's layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
         <item>Stawu ramiennego (bark)</item>
         <item>Odcinka piersiowego kręgosłupa</item>
         <item>Odcinka lędźwiowego kręgosłupa</item>
-        <item>Stawu biodrowego (ból biodra)</item>
+        <item>Stawu biodrowego (biodra)</item>
         <item>Stawu kolanowego</item>
         <item>Goleni (Achilles) oraz stawu skokowego</item>
     </string-array>
