--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,25 +35,6 @@
         <item>Dźwigacz łopatki</item>
     </string-array>
 
-
-    <string-array name="neck_ball_location">
-        <item>Pod głową w okolicy kości potylicznej</item>
-        <item>Okolica tylno-boczna szyi w połowie jej długości</item>
-        <item>Połowa odległości między szyją a barkiem</item>
-    </string-array>
-
-    <string-array name="neck_movement_direction">
-        <item>Ruch głową w górę i w dół</item>
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-    </string-array>
-
-    <string-array name="neck_movement_direction_after_30_seconds">
-        <item>Ruch głową w lewo i w prawo</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-    </string-array>
-
     <string-array name="shoulder">
         <item>Dźwigacz łopatki</item>
         <item>Mięśnie równoległoboczne</item>
@@ -63,55 +44,10 @@
         <item>Przedni akton mięśnia naramiennego</item>
     </string-array>
 
-    <string-array name="shoulder_ball_location">
-        <item>Połowa odległości między szyją a barkiem</item>
-        <item>Na wysokości łopatek, między odcinkiem piersiowym kręgosłupa a łopatką</item>
-        <item>Tylno-boczna strona stawu ramiennego, okolice mięśnia naramiennego oraz łopatki</item>
-        <item>Tylno-boczna strona klatki piersiowej</item>
-        <item>Połowa odległości na linii między obojczykiem a sutkiem</item>
-        <item>Przednio-boczna cześć stawu ramiennego</item>
-    </string-array>
-
-    <string-array name="shoulder_movement_direction">
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-        <item>W górę i w dół poprzez odpychanie się z kończyn dolnych</item>
-        <item>Ruch w górę i w dół poprzez zgięcie boczne tułowia</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-        <item>Ruch w górę i w dół  poprzez przenoszenie ciężaru ciała z lewej na prawą nogę</item>
-    </string-array>
-
-    <string-array name="shoulder_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-    </string-array>
-
     <string-array name="thoracic_spine">
         <item>Mięśnie równoległoboczne</item>
         <item>Prostownik odcinka piersiowego oraz część wstępująca czworobocznego</item>
         <item>Mięsień piersiowy mniejszy</item>
-    </string-array>
-
-    <string-array name="thoracic_spine_ball_location">
-        <item>Na wysokości łopatek, między odcinkiem piersiowym kręgosłupa a łopatką</item>
-        <item>Okolice kąta dolnego łopatki, w połowie odcinka piersiowego kręgosłupa</item>
-        <item>Połowa odległości na linii między obojczykiem a sutkiem</item>
-    </string-array>
-
-    <string-array name="thoracic_spine_movement_direction">
-        <item>W górę i w dół poprzez odpychanie się z kończyn dolnych</item>
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-        <item>Ruch w górę i w dół poprzez uginanie kolan</item>
-    </string-array>
-
-    <string-array name="thoracic_spine_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
     </string-array>
 
     <string-array name="lumbar_spine">
@@ -123,63 +59,12 @@
         <item>Mięsień dwugłowy uda</item>
     </string-array>
 
-    <string-array name="lumbar_spine_ball_location">
-        <item>Tylno-boczna strona tułowia, połowa długości miedzy klatką piersiową a biodrem</item>
-        <item>Na mięśniu pośladkowym wielkim w jego centralnej części</item>
-        <item>Dolna część mięśnia pośladkowego, między krętarzem kości udowej a kością krzyżową</item>
-        <item>Tylno-boczna część mięśni pośladkowych, poniżej grzebienia biodrowego</item>
-        <item>Przednio-boczna strona stawu biodrowego</item>
-        <item>Tylno-boczna część uda w połowie długości</item>
-    </string-array>
-
-    <string-array name="lumbar_spine_movement_direction">
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-    </string-array>
-
-    <string-array name="lumbar_spine_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-    </string-array>
-
     <string-array name="hips">
         <item>Mięsień gruszkowaty</item>
         <item>Mięsień pośladkowy średni</item>
         <item>Mięsień naprężacz powięzi szerokiej</item>
         <item>Mięśnie przywodzące</item>
         <item>Mięsień dwugłowy uda</item>
-    </string-array>
-
-    <string-array name="hips_ball_location">
-        <item>Dolna część mięśnia pośladkowego, między krętarzem kości udowej a kością krzyżową</item>
-        <item>Tylno-boczna część mięśni pośladkowych, poniżej grzebienia biodrowego</item>
-        <item>Przednio-boczna strona stawu biodrowego</item>
-        <item>Bliższa, przyśrodkowa część uda na przebiegu przywodzicieli</item>
-        <item>Tylno-boczna część uda w połowie długości</item>
-    </string-array>
-
-    <string-array name="hips_movement_direction">
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-    </string-array>
-
-    <string-array name="hips_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
     </string-array>
 
     <string-array name="knee">
@@ -191,33 +76,6 @@
         <item>Mięsień piszczelowy przedni</item>
     </string-array>
 
-    <string-array name="knee_ball_location">
-        <item>Tylno-boczna część mięśni pośladkowych, poniżej grzebienia biodrowego</item>
-        <item>Przednio-boczna strona stawu biodrowego</item>
-        <item>Przednio-boczna część uda w połowie długości</item>
-        <item>Przyśrodkowa cześć uda nad stawem kolanowym</item>
-        <item>Tylno-boczna część uda w połowie długości</item>
-        <item>Przednio-boczna część goleni w połowie długości</item>
-    </string-array>
-
-    <string-array name="knee_movement_direction">
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez przesuwnie ciała po podłożu</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-    </string-array>
-
-    <string-array name="knee_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-    </string-array>
-
     <string-array name="achilles_and_ankle_joint">
         <item>Mięsień dwugłowy uda</item>
         <item>Głowa przyśrodkowa brzuchatego</item>
@@ -226,29 +84,18 @@
         <item>Odwodziciel palucha</item>
     </string-array>
 
-    <string-array name="achilles_and_ankle_joint_ball_location">
-        <item>Tylno-boczna część uda w połowie długości</item>
-        <item>Tylno-przyśrodkowa część goleni w połowie długości</item>
-        <item>Tylno-boczna część goleni w połowie długości</item>
-        <item>Przednio-boczna część goleni w połowie długości</item>
-        <item>Przyśrodkowa strona stopy</item>
-    </string-array>
-
-    <string-array name="achilles_and_ankle_joint_movement_direction">
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez odpychanie się z kończyny podporowej</item>
-        <item>Ruch w górę i w dół poprzez przetaczanie piłki stopą</item>
-    </string-array>
-
-    <string-array name="achilles_and_ankle_joint_movement_direction_after_30_seconds">
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez rotację ciała</item>
-        <item>Ruch w lewo i w prawo poprzez przetaczanie piłki stopą</item>
-    </string-array>
+    <!--Intro strings-->
+    <string name="intro_title_first">Witaj!</string>
+    <string name="intro_description_first">Self-Therapy Ball App to aplikacja, która pozwala na samodzielną terapię dolegliwości bólowych z użyciem piłki ST Ball</string>
+    <string name="intro_title_second">ST Ball</string>
+    <string name="intro_description_second">Jeśli nie masz jeszcze piłki możesz ją kupić na naszej stronie</string>
+    <string name="intro_buy_button_text">SKLEP</string>
+    <string name="intro_title_third">Uwaga</string>
+    <string name="intro_description_third_disclaimer">Aplikacja Self Therapy Ball App ma tylko charakter informacyjny i nie zastąpi porady lekarza specjalisty. Informacje w niej zawarte nie są substytutem profesjonalnej porady, diagnozy czy leczenia. Cała zawartość, łącznie z tekstem, grafikami i zdjęciami dostępnymi w tej aplikacji jest tylko informacją ogólnego przeznaczenia.</string>
+    <string name="intro_accept_text">Rozumiem i akceptuję</string>
+    <string name="intro_checkbox_not_checked_text">Zaakceptuj by przejść dalej</string>
+    <string name="intro_title_fourth">Poradnik</string>
+    <string name="intro_description_fourth">Za chwilę dowiesz się jak używać aplikacji</string>
 
     <!--Showcase strings-->
     <string name="showcase_got_it_text">ROZUMIEM</string>
