--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="menu_message">Lokalizacja bólu</string>
     <string name="change_movement_direction_message">Zmień kierunek ruchu</string>
     <string name="exercise_end_message">Koniec!</string>
+    <string name="fab_text_start_plan">Zacznij od pierwszego punktu</string>
+    <string name="fab_text_start_exercise">Zacznij od tego punktu</string>
 
     <string-array name="menu_pain">
         <item>Kark</item>
@@ -20,19 +22,22 @@
     </string-array>
 
     <string-array name="menu_durations">
-        <item>3 min</item>
-        <item>5 min</item>
-        <item>3 min</item>
         <item>6 min</item>
+        <item>5 min</item>
+        <item>6 min</item>
+        <item>12 min</item>
         <item>5 min</item>
         <item>6 min</item>
         <item>5 min</item>
     </string-array>
 
     <string-array name="neck">
-        <item>Mięśnie podpotyliczne</item>
-        <item>Prostowniki odcinka szyjnego</item>
-        <item>Dźwigacz łopatki</item>
+        <item>Mięśnie podpotyliczne (prawe)</item>
+        <item>Prostowniki odcinka szyjnego (prawe)</item>
+        <item>Dźwigacz łopatki (prawy)</item>
+        <item>Mięśnie podpotyliczne (lewe)</item>
+        <item>Prostowniki odcinka szyjnego (lewe)</item>
+        <item>Dźwigacz łopatki (lewy)</item>
     </string-array>
 
     <string-array name="shoulder">
@@ -45,18 +50,27 @@
     </string-array>
 
     <string-array name="thoracic_spine">
-        <item>Mięśnie równoległoboczne</item>
-        <item>Prostownik odcinka piersiowego oraz część wstępująca czworobocznego</item>
-        <item>Mięsień piersiowy mniejszy</item>
+        <item>Mięśnie równoległoboczne (prawe)</item>
+        <item>Prostownik odcinka piersiowego oraz część wstępująca czworobocznego (prawa)</item>
+        <item>Mięsień piersiowy mniejszy (prawy)</item>
+        <item>Mięśnie równoległoboczne (lewe)</item>
+        <item>Prostownik odcinka piersiowego oraz część wstępująca czworobocznego (lewa)</item>
+        <item>Mięsień piersiowy mniejszy (lewy)</item>
     </string-array>
 
     <string-array name="lumbar_spine">
-        <item>Czworoboczny lędźwi</item>
-        <item>Mięsień pośladkowy wielki</item>
-        <item>Mięsień gruszkowaty</item>
-        <item>Mięsień pośladkowy średni</item>
-        <item>Mięsień naprężacz powięzi szerokiej</item>
-        <item>Mięsień dwugłowy uda</item>
+        <item>Czworoboczny lędźwi (prawy)</item>
+        <item>Mięsień pośladkowy wielki (prawy)</item>
+        <item>Mięsień gruszkowaty (prawy)</item>
+        <item>Mięsień pośladkowy średni (prawy)</item>
+        <item>Mięsień naprężacz powięzi szerokiej (prawy)</item>
+        <item>Mięsień dwugłowy uda (prawy)</item>
+        <item>Czworoboczny lędźwi (lewy)</item>
+        <item>Mięsień pośladkowy wielki (lewy)</item>
+        <item>Mięsień gruszkowaty (lewy)</item>
+        <item>Mięsień pośladkowy średni (lewy)</item>
+        <item>Mięsień naprężacz powięzi szerokiej (lewy)</item>
+        <item>Mięsień dwugłowy uda (lewy)</item>
     </string-array>
 
     <string-array name="hips">
@@ -91,7 +105,7 @@
     <string name="intro_description_second">Jeśli nie masz jeszcze piłki możesz ją kupić na naszej stronie</string>
     <string name="intro_buy_button_text">SKLEP</string>
     <string name="intro_title_third">Uwaga</string>
-    <string name="intro_description_third_disclaimer">Aplikacja Self Therapy Ball App ma tylko charakter informacyjny i nie zastąpi porady lekarza specjalisty. Informacje w niej zawarte nie są substytutem profesjonalnej porady, diagnozy czy leczenia. Cała zawartość, łącznie z tekstem, grafikami i zdjęciami dostępnymi w tej aplikacji jest tylko informacją ogólnego przeznaczenia.</string>
+    <string name="intro_description_third_disclaimer">Aplikacja Self Therapy Ball App ma charakter informacyjny i nie zastąpi wizyty u specjalisty. Informacje w niej zawarte nie są równoważne profesjonalnej poradzie, diagnostyce i leczeniu.</string>
     <string name="intro_accept_text">Rozumiem i akceptuję</string>
     <string name="intro_checkbox_not_checked_text">Zaakceptuj by przejść dalej</string>
     <string name="intro_title_fourth">Poradnik</string>
@@ -117,7 +131,80 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_introduction">IntroductionActivity</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ustawienia</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
 
 </resources>
